add remote_api handling

--- a/app.yaml
+++ b/app.yaml
@@ -7,5 +7,9 @@ handlers:
 - url: .*
   script: main.py
 
+- url: /remote_api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin
+
 inbound_services:
 - xmpp_message
